<resources>
    <string name="app_name">Students List</string>
    <string name="no_students">No Students</string>
    <string name="btn_save">SAVE</string>
    <string name="first_name_hint_text">First Name</string>
    <string name="last_name_hint_text">Last Name</string>
    <string name="age_hint_text">Age</string>
    <string name="addr_hint_text">Address</string>
    <string name="add_student">Add Student</string>
    <string name="added_success">\"Student Added Successfully\"</string>
    <string-array name="firstNameArray">
        <item>"Ameya"</item>
        <item>"Sameer"</item>
        <item>"Mayuresh"</item>
        <item>"Alok"</item>
        <item>"Saurabh"</item>
    </string-array>
    <string-array name="lastNameArray">
        <item>"Kulkarni"</item>
        <item>"Belsare"</item>
        <item>"Deshpande"</item>
        <item>"Kulkarni"</item>
        <item>"Dev"</item>
    </string-array>
    <integer-array name="ageArray">
        <item>10</item>
        <item>11</item>
        <item>15</item>
        <item>12</item>
        <item>14</item>
    </integer-array>
</resources>
